--- a/src/app/grocery/grocery.component.css
+++ b/src/app/grocery/grocery.component.css
@@ -1,3 +1,13 @@
-.margin{
-margin: 50px;
+
+h2{
+  text-align: center;
+  margin-top: 50px;
+  padding-bottom: 15px;
+}
+#margin-bottom{
+ margin-bottom: 0px;
+}
+.col-centered{
+float: none;
+margin: 0 auto;
 }
