--- a/src/app/grocery/grocery.component.html
+++ b/src/app/grocery/grocery.component.html
@@ -1,39 +1,9 @@
-<!-- <div class="margin">
+
+<div>
   <h2> Grocery list manager </h2>
 
   <div class="row">
-      <div class="col-xs-6 col-md-4">
-          <div class="input-group">
-              <input type="text" class="form-control" placeholder="enter grocery items" id="txtSearch" [(ngModel)]="task"/>
-              <div class="input-group-btn">
-                  <button class="btn btn-primary" type="button"(click)="onClick()">
-      <span class="glyphicon glyphicon-ok"></span>
-      </button>
-              </div>
-          </div>
-      </div>
-  </div>
-
-</div>
-
-
-<span class='margin'>
-  {{tasks | json}}
-</span>
-
-<ul class="list-group">
-  <li *ngFor="let task of tasks" class="list-group-item">
-      <span> {{ task.name }} </span>
-  </li>
-</ul> -->
-
-
-
-<div class='margin'>
-  <h2> Grocery list manager </h2>
-
-  <div class="row">
-      <div class="col-xs-6 col-md-4">
+      <div class="col-xs-6 col-md-4 col-centered">
           <div class="input-group">
               <input type="text" class="form-control" placeholder="enter grocery items" [(ngModel)]="task" />
               <div class="input-group-btn">
@@ -47,10 +17,14 @@
 
   <br />
 
+
+<div class="col-xs-6 col-md-4 col-centered">
   <ul class="list-group">
-      <li *ngFor="let task of tasks" class="list-group-item">
-          <span> {{ task.name }} </span>
-      </li>
-  </ul>
+    <li *ngFor="let task of tasks" class="list-group-item" id="margin-bottom">
+    
+      <span> {{ task.name }} </span>
+        
+   </ul>
+</div>
 
 </div>
