--- a/src/app/grocery/grocery.component.html
+++ b/src/app/grocery/grocery.component.html
@@ -3,7 +3,7 @@
   <h2> Grocery list manager </h2>
 
   <div class="row">
-      <div class="col-xs-6 col-md-4 col-sm-12 col-centered">
+      <div class="col-xs-6 col-md-4 col-centered">
           <div class="input-group">
               <input type="text" class="form-control" placeholder="enter grocery items" [(ngModel)]="task.name" />
               <div class="input-group-btn">
